--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 </div>
             </section>
         </section>
+        <div style="clear: both;"></div>
     </main>
     <footer>
         <aside>
